# LTScal

./: .gitignore  README.md  config.py  googleSheetToPython.py  load_weather.sh  requirements.txt  setup.cfg  start_guide.sh  uwsgi.ini  ~$Presentation_V0.0.pptx
data/: sample.json
flask_calendar/: actions.py  app.py  app_utils.py  authentication.py  db.py  gregorian_calendar.py  invoice.py  schema.sql  uwsgi.py
flask_calendar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flask_calendar/static/: style.css
flask_calendar/static/js/: calendar_views.js
flask_calendar/templates/: calendar.html  day_view.html  event_popup.html  month_view.html  new_header_layout.html  new_task.html  task.html  week_view Kopie.html  week_view.html
tests/: test_flaskCalendar.py
