[metadata]
name = flask_calendar
version = 1.0.0
maintainer_email = lisa.krause10@yahoo.de
description = Scheduling and accounting app
long_description = file: README.md

[options]
packages = find:
install_requires = 
    Flask

[options.extras_require]
test = 
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = 
    flask_calendar
